# beamterm

./: .gitignore  CLAUDE.md  DYNAMIC_ATLAS_TESTING.md  beamterm-terx.patch  hack-nerd-font-14pt.atlas  jetbrains-nerd-12pt.atlas  jetbrains-nerd-14pt.atlas  jetbrains-nerd-16pt.atlas
beamterm-atlas/src/: coordinate.rs  grapheme.rs  verify_atlas_main.rs
beamterm-data/src/: atlas.rs  glyph.rs  serialization.rs
beamterm-renderer/: Cargo.toml
beamterm-renderer/fonts/: README.md
beamterm-renderer/src/: lib.rs  mouse.rs  terminal.rs  wasm.rs
beamterm-renderer/src/font/: default_font.rs  glyph_bounds.rs  glyph_cache.rs  glyph_rasterizer.rs  mod.rs  runtime_font_system.rs
beamterm-renderer/src/gl/: atlas.rs  canvas_rasterizer.rs  dynamic_atlas.rs  renderer.rs  selection.rs  terminal_grid.rs  texture.rs
beamterm-renderer/src/shaders/: cell.frag  cell.vert
examples/canvas_waves/: Cargo.toml
examples/canvas_waves/data/: hack-30pt.atlas
examples/canvas_waves/src/: main.rs  wave_effect.rs
