[package]
name = "beamterm-renderer"
description = "High-performance WebGL2 terminal renderer for beamterm, targeting sub-millisecond render times in web browsers"
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

# Exclude development files from package
exclude = [
    ".gitignore"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
beamterm-data = { path = "../beamterm-data", version = "0.11.0" }
compact_str = { workspace = true }
console_error_panic_hook = { workspace = true }
thiserror = { workspace = true }
js-sys = { workspace = true }
unicode-width.workspace = true
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.54"

[dependencies.unicode-segmentation]
workspace = true
optional = true

[dependencies.emojis]
workspace = true

[dependencies.lru]
version = "0.16"

[dependencies.serde]
optional = true
workspace = true

[dependencies.serde_json]
workspace = true
optional = true

[dependencies.serde-wasm-bindgen]
optional = true
version = "0.6.5"

[dependencies.web-sys]
workspace = true
features = [
    'console',
    'CanvasRenderingContext2d',
    'Clipboard',
    'CssStyleDeclaration',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlElement',
    'ImageData',
    'KeyboardEvent',
    'Location',
    'MouseEvent',
    'Navigator',
    'Node',
    'OffscreenCanvas',
    'OffscreenCanvasRenderingContext2d',
    'Performance',
    'Screen',
    'TextMetrics',
    'WebGl2RenderingContext',
    'WebGlBuffer',
    'WebGlContextEvent',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'Window',
]

[features]
js-api = [
    "compact_str/serde",

    "dep:serde",
    "dep:serde_json",
    "dep:serde-wasm-bindgen",
    "dep:unicode-segmentation",
]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-unknown-unknown"

# Exclude shader files from package (they're included via include_str!)
[package.metadata.cargo-machete]
ignored = ["console_error_panic_hook", "web-time"]  # Used in examples and bins
